[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/fsm/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://scripts/fsm/states/StartState.gd" type="Script" id=2]
[ext_resource path="res://graphics/select.png" type="Texture" id=3]
[ext_resource path="res://fonts/large_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/Title.gd" type="Script" id=5]
[ext_resource path="res://fonts/medium_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://scripts/fsm/states/BeginGameState.gd" type="Script" id=7]
[ext_resource path="res://scripts/fsm/states/PlayState.gd" type="Script" id=8]
[ext_resource path="res://scripts/fsm/states/GameOverState.gd" type="Script" id=9]
[ext_resource path="res://scripts/ParallaxBackground.gd" type="Script" id=10]
[ext_resource path="res://graphics/background.png" type="Texture" id=11]
[ext_resource path="res://scripts/tools/BOUNDARY.gd" type="Script" id=12]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 0.501961 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 512

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="StartState" type="Node" parent="." index="0"]

script = ExtResource( 2 )

[node name="StartScreen" type="Control" parent="StartState" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 512.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Alpha" type="Sprite" parent="StartState/StartScreen" index="0"]

scale = Vector2( 1, 288 )
z_index = 1
texture = SubResource( 2 )
centered = false
_sections_unfolded = [ "Animation", "Offset", "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Menu" type="Node2D" parent="StartState/StartScreen" index="1"]

z_index = 2

[node name="TitleBackground" type="NinePatchRect" parent="StartState/StartScreen/Menu" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 136.0
margin_top = 59.0
margin_right = 312.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
_sections_unfolded = [ "Patch Margin" ]

[node name="Title" type="RichTextLabel" parent="StartState/StartScreen/Menu/TitleBackground" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -14.0
margin_right = 66.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=aqua]M[/color][color=fuchsia]A[/color]TCH 3"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "MATCH 3"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 5 )
_sections_unfolded = [ "BBCode" ]

[node name="TitleShadow" type="Label" parent="StartState/StartScreen/Menu/TitleBackground/Title" index="1"]

show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -12.0
margin_right = 68.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MATCH 3"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="MenuBackground" type="NinePatchRect" parent="StartState/StartScreen/Menu" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 136.0
margin_top = 169.0
margin_right = 312.0
margin_bottom = 223.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
_sections_unfolded = [ "Patch Margin" ]

[node name="Options" type="VBoxContainer" parent="StartState/StartScreen/Menu/MenuBackground" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -18.0
margin_right = 41.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Start" type="Button" parent="StartState/StartScreen/Menu/MenuBackground/Options" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 82.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.231628, 0.315499, 0.644531, 1 )
custom_colors/font_color_hover = Color( 0.378113, 0.488564, 0.921875, 1 )
custom_colors/font_color_pressed = Color( 0.378113, 0.488564, 0.921875, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="StartShadow" type="Label" parent="StartState/StartScreen/Menu/MenuBackground/Options/Start" index="0"]

show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -7.0
margin_right = 25.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0813599, 0.133071, 0.335938, 1 )
text = "Start"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="Quit" type="Button" parent="StartState/StartScreen/Menu/MenuBackground/Options" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 82.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.231628, 0.315499, 0.644531, 1 )
custom_colors/font_color_hover = Color( 0.378113, 0.488564, 0.921875, 1 )
custom_colors/font_color_pressed = Color( 0.378113, 0.488564, 0.921875, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit Game"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="QuitShadow" type="Label" parent="StartState/StartScreen/Menu/MenuBackground/Options/Quit" index="0"]

show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -7.0
margin_right = 42.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0813599, 0.133071, 0.335938, 1 )
text = "Quit Game"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="BeginGameState" type="Node" parent="." index="1"]

script = ExtResource( 7 )

[node name="PlayState" type="Node" parent="." index="2"]

editor/display_folded = true
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="PlayState" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="GameOverState" type="Node" parent="." index="3"]

script = ExtResource( 9 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="4"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true
script = ExtResource( 10 )
_sections_unfolded = [ "Scroll" ]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

motion_scale = Vector2( 1, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 1024, 0 )
_sections_unfolded = [ "Motion" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="background" type="Sprite" parent="ParallaxBackground/ParallaxLayer" index="0"]

texture = ExtResource( 11 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="DEBUG" type="Node2D" parent="." index="5"]

script = ExtResource( 12 )

[connection signal="button_down" from="StartState/StartScreen/Menu/MenuBackground/Options/Start" to="StartState" method="_on_Start_button_down"]

[connection signal="button_down" from="StartState/StartScreen/Menu/MenuBackground/Options/Quit" to="StartState" method="_on_Quit_button_down"]


